Code Reference: Improvements to inline source code display. Fixes #176
* More efficient implementation of get_source_code()
* Add get_source_code_root_dir() which gets 'wp_parser_root_import_dir' option value if set by parser, else ABSPATH
* Add post_type_has_source_code()
* Use 'wporg' as the text domain
* Slight tweak to JS height comparison to ensure functions that just fit don't trigger expansion handling
* Allow x scrollbar for .source-code-container and adjust heights to account for its possible display
* Add extra height to collapsed state of .source-code-container to partially show the first hidden line to better indicate there is more code
* Add right border to .source-code-container so it is easier to tell if code is being clipped
* Change 'View source' link to 'View source code:' label with explicit links to inline source and/or WP Trac code browser
* Source code is stored in post meta; parse and store it as requested if it isn't
* Sanity check to ensure proper conditions exist for parsing
* Add optional 'force_parse' arg to get_source_code() to force reparsing of source file



git-svn-id: https://meta.svn.wordpress.org/sites/trunk@677 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-developer/scss/main.scss
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-developer/scss/main.scss
@@ -856,7 +856,9 @@
 	}
 
 	.source-code-container {
-		overflow: hidden;
+		border-right: 1px solid #dfdfdf;
+		overflow-x: auto;
+		overflow-y: hidden;
 	}
 
 	.show-complete-source {
